<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedicineSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_wo">Wo</string>
    <string name="nicheng">hongw</string>
    <string name="zhanghao">hhhh</string>
    <string name="wdsc">我的收藏</string>
    <string name="sz">设置</string>
    <string name="wdkj">我的课件</string>
    <string name="tx">头像</string>
    <string name="nc">昵称</string>
    <string name="zh">我的账号</string>
    <string name="xb">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="tj">提交</string>
    <string name="xgmm">修改密码</string>
    <string name="xzzp">选择照片</string>
    <string name="qx">取消</string>
    <string name="qr">确认</string>

</resources>