<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/reviseuersinfo_title_RelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/fragment_bottom_normal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/main_title_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="個人信息"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/activity_change_uersinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/frame_little_black"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/gerenxinxi_toux"
            android:layout_width="match_parent"
            android:layout_height="80dp" >

            <TextView
                android:id="@+id/activity_xiugaiwo_change_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/tx"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_launcher" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/activity_xiugaiwo_change_zh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/zh"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/gerenxinxi_zhangh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/zhanghao"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/nc"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/gerenxinxi_nic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/nicheng"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/xb"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/gerenxinxi_xingb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/man"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="qq"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/gerenxinxi_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="11111111"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="邮箱"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/gerenxinxi_youxiang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="11111111"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>